k8s/apps/sandbox/local/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: sandbox
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: sandbox
#  annotations:
#    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/kong/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-http
  namespace: sandbox
spec:
  parentRefs:
    - name: sandbox-gateway
      namespace: istio-ingress
  hostnames: ["httpbin.sandbox"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /get
    - path:
        type: PathPrefix
        value: /headers
    backendRefs:
      - name: httpbin
        port: 8000
    filters:
      - requestHeaderModifier:
          add:
            - name: my-added-header
              value: added-value
        type: RequestHeaderModifier
